fixed latptop-bag alignment

--- a/app/assets/styles/modules/_homePage.scss
+++ b/app/assets/styles/modules/_homePage.scss
@@ -629,8 +629,8 @@
     		right: 117px;
     		margin: 15px 0 0 0;
     		@media (max-width: 440px) {
-				top: 191rem;
-				right: 2rem;
+				top: 181rem;
+				right: 3rem;
 				img {
     				width: 350px;
 					@media (min-width: 376px) and (max-width: 414px) {
